--- a/assets/css/home.scss
+++ b/assets/css/home.scss
@@ -1,3 +1,9 @@
+.banner {
+    width: 100%;
+    height: 50vh;
+    object-fit: cover;
+}
+
 .home {
     .card-img-top {
         object-fit: cover;
