--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -8,6 +8,7 @@
 @import "episodes";
 @import "episode";
 @import "actor";
+@import "comments";
 
 @mixin primary-title {
     font-family: 'Orbitron', sans-serif;
