--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -38,7 +38,7 @@
                 </div>
             #}
 
-            <button class="btn btn-lg" type="submit">
+            <button class="btn btn-primary btn-lg" type="submit">
                 Se connecter
             </button>
         </form>
