--- a/templates/wild/episode.html.twig
+++ b/templates/wild/episode.html.twig
@@ -4,7 +4,7 @@
     <div class="posters">
         <img src="{{ program.poster }}" alt="" class="poster-episode1 mt-5">
         {% if program.poster2 is defined %}
-        <img src="{{ program.poster2 }}" alt="" class="poster-episode2">
+            <img src="{{ program.poster2 }}" alt="" class="poster-episode2">
         {% endif %}
     </div>
 
@@ -20,10 +20,13 @@
             </div>
         </div>
 
-        <a href="{{ path('show_season', {'id': season.id }) }}" class="btn" role="button">Saison {{ season.number }}
-            de {{ program.title }} </a>
-        <a href="{{ path('show_program', {'programName': program.title }) }}" class="btn" role="button">Détails
-            de {{ program.title }}</a>
+        <a href="{{ path('show_program', {'programName': program.title }) }}" class="btn btn-primary" role="button">
+            <i class="fas fa-reply mr-2"></i> Retour à {{ program.title }}
+        </a>
+
+        <a href="{{ path('show_season', {'id': season.id }) }}" class="btn btn-primary" role="button">
+            <i class="fas fa-film mr-2"></i> Saison {{ season.number }} de {{ program.title }}
+        </a>
 
         <h2>Commentaires</h2>
         <hr>
@@ -40,8 +43,17 @@
                     <div class="row">
                         <div class="card">
                             <div class="card-body">
-                                <p><img src="{{ comment.author.picture }}" alt="" class="profil-pic rounded-circle">
-                                    <b>{{ comment.author.username }}</b></p>
+                                <p>
+                                    {% if is_granted('ROLE_SUBSCRIBER') %}
+                                        {% if (app.user.id == comment.author.id) or (is_granted('ROLE_ADMIN')) %}
+                                            {% include 'comment/_delete_form.html.twig' %}
+                                        {% endif %}
+                                    {% endif %}
+
+                                    <img src="{{ comment.author.picture }}" alt="" class="profil-pic rounded-circle">
+                                    <b>{{ comment.author.username }}</b>
+                                </p>
+
                                 <p class="">{% if comment.rate == 1 %}
                                         <i class="fas fa-star text-warning"></i>
                                         <i class="far fa-star"></i><i class="far fa-star"></i><i
