--- a/templates/category/index.html.twig
+++ b/templates/category/index.html.twig
@@ -5,7 +5,7 @@
         {% form_theme form 'bootstrap_4_layout.html.twig' %}
         {{ form_start(form) }}
         {{ form_row(form.name) }}
-        <button class="btn">{{ button_label|default('Save') }}</button>
+        <button class="btn btn-primary">{{ button_label|default('Ajouter') }}</button>
         {{ form_end(form) }}
     </div>
 
