--- a/templates/program/new.html.twig
+++ b/templates/program/new.html.twig
@@ -7,5 +7,5 @@
 
     {{ include('program/_form.html.twig') }}
 
-    <a href="{{ path('program_index') }}" class="btn">Retour</a>
+    <a href="{{ path('program_index') }}" class="btn btn-primary">Retour</a>
 {% endblock %}
