--- a/templates/actor/edit.html.twig
+++ b/templates/actor/edit.html.twig
@@ -3,11 +3,17 @@
 {% block title %}Modifier un acteur{% endblock %}
 
 {% block body %}
-    <h1>Modifier un acteur</h1>
 
-    {{ include('actor/_form.html.twig', {'button_label': 'Modifier'}) }}
+    <div class="container mt-4">
 
-    <a href="{{ path('actor_index') }}" class="btn">Retour à la liste des acteurs</a>
+        <a href="{{ path('actor_index') }}" class="btn btn-primary">
+            <i class="fas fa-reply mr-2"></i> Retour à la liste des acteurs
+        </a>
 
-    {{ include('actor/_delete_form.html.twig') }}
+        <h1>Modifier l'acteur</h1>
+        <hr>
+
+        {{ include('actor/_form.html.twig', {'button_label': 'Enregistrer les modifications'}) }}
+
+    </div>
 {% endblock %}
