--- a/templates/actor/_delete_form.html.twig
+++ b/templates/actor/_delete_form.html.twig
@@ -1,5 +1,5 @@
 <form method="post" action="{{ path('actor_delete', {'id': actor.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
     <input type="hidden" name="_method" value="DELETE">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ actor.id) }}">
-    <button class="btn">Supprimer</button>
+    <button class="btn btn-danger"><i class="fas fa-times mr-2"></i> Supprimer</button>
 </form>
