--- a/templates/actor/index.html.twig
+++ b/templates/actor/index.html.twig
@@ -3,33 +3,41 @@
 {% block title %}Acteurs{% endblock %}
 
 {% block body %}
-    <h1>Tous les acteurs</h1>
 
-    <a href="{{ path('actor_new') }}" class="btn btn-primary">Ajouter un acteur</a>
+    <div class="container">
+        <h1 class="mt-5">Tous les acteurs</h1>
+        <hr>
 
-    <table class="table">
-        <thead>
+        <a href="{{ path('actor_new') }}" class="btn btn-primary mt-3 mb-5"><i class="fas fa-plus mr-2"></i> Ajouter un acteur</a>
+
+        <table class="table table-striped text-center">
+            <thead class="table-dark">
             <tr>
                 <th></th>
-                <th>Nom</th>
-                <th>Admin</th>
+                <th>Nom de l'acteur</th>
+                <th>Gestion de l'acteur</th>
             </tr>
-        </thead>
-        <tbody>
-        {% for actor in actors %}
-            <tr>
-                <td>{{ loop.index }}</td>
-                <td>{{ actor.name }}</td>
-                <td>
-                    <a href="{{ path('actor_show', {'slug': actor.slug}) }}" class="btn btn-primary">Détails</a>
-                    <a href="{{ path('actor_edit', {'slug': actor.slug}) }}" class="btn btn-primary">Modifier</a>
-                </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="3">Aucun acteur dans la liste</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+            </thead>
+            <tbody>
+            {% for actor in actors %}
+                <tr>
+                    <td class="align-middle">{{ loop.index }}</td>
+                    <td class="align-middle">{{ actor.name }}</td>
+                    <td class="d-flex justify-content-center">
+                        <a href="{{ path('actor_show', {'slug': actor.slug}) }}" class="btn btn-primary"><i
+                                    class="far fa-eye mr-2"></i> Détails</a>
+                        <a href="{{ path('actor_edit', {'slug': actor.slug}) }}" class="btn btn-primary"><i
+                                    class="fas fa-cog mr-2"></i> Modifier</a>
+                        {{ include('actor/_delete_form.html.twig') }}
+                    </td>
+                </tr>
+            {% else %}
+                <tr>
+                    <td colspan="3">Aucun acteur dans la liste</td>
+                </tr>
+            {% endfor %}
+            </tbody>
+        </table>
+
+    </div>
 {% endblock %}
