--- a/templates/actor/new.html.twig
+++ b/templates/actor/new.html.twig
@@ -3,9 +3,18 @@
 {% block title %}Nouvel acteur{% endblock %}
 
 {% block body %}
-    <h1>Ajouter un nouvel acteur</h1>
 
-    {{ include('actor/_form.html.twig') }}
+    <div class="container mt-4">
 
-    <a href="{{ path('actor_index') }}" class="btn">Retour à la liste des acteurs</a>
+        <a href="{{ path('actor_index') }}" class="btn btn-primary">
+            <i class="fas fa-reply mr-2"></i> Retour à la liste des acteurs
+        </a>
+
+        <h1>Ajouter un nouvel acteur</h1>
+        <hr>
+
+        {{ include('actor/_form.html.twig') }}
+
+
+    </div>
 {% endblock %}
