--- a/templates/program/show.html.twig
+++ b/templates/program/show.html.twig
@@ -3,47 +3,60 @@
 {% block title %}{{ program.title }}{% endblock %}
 
 {% block body %}
-    <h1>{{ program.title }}</h1>
 
-    <table class="table">
-        <tbody>
-        <tr>
-            <th>Titre</th>
-            <td>{{ program.title }}</td>
-        </tr>
-        <tr>
-            <th>Catégorie</th>
-            <td>{{ program.category.name }}</td>
-        </tr>
-        <tr>
-            <th>Résumé</th>
-            <td>{{ program.summary }}</td>
-        </tr>
-        <tr>
-            <th>Affiche</th>
-            <td><img src="{{ program.poster }}" alt="" class="poster"></td>
-        </tr>
-        <tr>
-            <th>Acteurs</th>
-            <td>
-                <div class="casting">
-                    <ul>
-                        {% for actor in program.actors %}
-                            <li><a href="{{ path('actor_show', {'slug':actor.slug}) }}">{{ actor.name }}</a></li>
-                        {% else %}
-                            <li>Aucun acteur pour cette série</li>
-                        {% endfor %}
-                    </ul>
-                </div>
-            </td>
-        </tr>
+    <div class="container mt-4">
+        <a href="{{ path('program_index') }}" class="btn btn-primary">
+            <i class="fas fa-reply mr-2"></i> Retour à la liste des séries
+        </a>
 
-        </tbody>
-    </table>
+        <div class="d-flex align-items-center">
+            <h1>{{ program.title }}</h1>
+            <a href="{{ path('program_edit', {'slug': program.slug }) }}" class="btn btn-primary">
+                <i class="fas fa-cog mr-2"></i> Modifier
+            </a>
+        </div>
+        <hr>
 
-    <a href="{{ path('program_index') }}" class="btn">Retour</a>
+        <table class="table table-striped mb-5">
+            <tbody>
+            <tr>
+                <th class="table-dark">Titre</th>
+                <td>{{ program.title }}</td>
+            </tr>
+            <tr>
+                <th class="table-dark">Catégorie</th>
+                <td>{{ program.category.name }}</td>
+            </tr>
+            <tr>
+                <th class="table-dark">Résumé</th>
+                <td>{{ program.summary }}</td>
+            </tr>
+            <tr>
+                <th class="table-dark">Affiche(s)</th>
+                <td>
+                    <img src="{{ program.poster }}" alt="" class="poster">
+                    {% if program.poster2 is defined %}
+                    <img src="{{ program.poster2 }}" alt="" class="poster ml-3">
+                    {% endif %}
+                </td>
+            </tr>
+            <tr>
+                <th class="table-dark">Acteurs</th>
+                <td>
+                    <div class="casting">
+                        <ul>
+                            {% for actor in program.actors %}
+                                <li><a href="{{ path('actor_show', {'slug':actor.slug}) }}">{{ actor.name }}</a></li>
+                            {% else %}
+                                <li>Aucun acteur pour cette série</li>
+                            {% endfor %}
+                        </ul>
+                    </div>
+                </td>
+            </tr>
 
-    <a href="{{ path('program_edit', {'slug': program.slug }) }}" class="btn">Modifier</a>
+            </tbody>
+        </table>
 
-    {{ include('program/_delete_form.html.twig') }}
+    </div>
 {% endblock %}
