--- a/templates/program/index.html.twig
+++ b/templates/program/index.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
 
-    <div class="container mt-5 admin-actor">
+    <div class="container mt-5 admin">
         <h1>Toutes les séries</h1>
         <hr>
 
