--- a/assets/css/admin.scss
+++ b/assets/css/admin.scss
@@ -1,1 +1,14 @@
 @import "admin/actor";
+
+.admin {
+    .buttons {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+
+        .btn {
+            width: 7rem;
+        }
+    }
+}
