--- a/templates/season/edit.html.twig
+++ b/templates/season/edit.html.twig
@@ -3,11 +3,16 @@
 {% block title %}Modifier une saison{% endblock %}
 
 {% block body %}
-    <h1>Modifier une saison</h1>
+    <div class="container mt-4">
 
-    {{ include('season/_form.html.twig', {'button_label': 'Modifier'}) }}
+        <a href="{{ path('season_index') }}" class="btn btn-primary">
+            <i class="fas fa-reply mr-2"></i> Retour à la liste des saisons
+        </a>
 
-    <a href="{{ path('season_index') }}" class="btn">Retour</a>
+        <h1>Modifier une saison</h1>
+        <hr>
 
-    {{ include('season/_delete_form.html.twig') }}
+        {{ include('season/_form.html.twig', {'button_label': 'Enregistrer les modifications'}) }}
+
+    </div>
 {% endblock %}
