--- a/templates/season/new.html.twig
+++ b/templates/season/new.html.twig
@@ -3,9 +3,18 @@
 {% block title %}Nouvelle saison{% endblock %}
 
 {% block body %}
-    <h1>Ajouter une nouvelle saison</h1>
 
-    {{ include('season/_form.html.twig') }}
+    <div class="container mt-4">
 
-    <a href="{{ path('season_index') }}" class="btn">Retour</a>
+        <a href="{{ path('season_index') }}" class="btn btn-primary">
+            <i class="fas fa-reply mr-2"></i> Retour à la liste des saisons
+        </a>
+
+        <h1>Ajouter une nouvelle saison</h1>
+        <hr>
+
+        {{ include('season/_form.html.twig') }}
+
+    </div>
+
 {% endblock %}
