--- a/templates/season/show.html.twig
+++ b/templates/season/show.html.twig
@@ -3,28 +3,40 @@
 {% block title %}Saison{% endblock %}
 
 {% block body %}
-    <h1>Saison</h1>
+    <div class="container mt-4">
 
-    <table class="table">
-        <tbody>
+        <a href="{{ path('season_index') }}" class="btn btn-primary">
+            <i class="fas fa-reply mr-2"></i> Retour à la liste des saisons
+        </a>
+
+        <div class="d-flex align-items-center">
+            <h1>Saison {{ season.number }} de {{ season.program.title }}</h1>
+            <a href="{{ path('season_edit', {'id': season.id}) }}" class="btn btn-primary">
+                <i class="fas fa-cog mr-2"></i> Modifier
+            </a>
+        </div>
+        <hr>
+
+        <table class="table table-striped">
+            <tbody>
             <tr>
-                <th>Année</th>
+                <th class="table-dark">Série</th>
+                <td>{{ season.program.title }}</td>
+            </tr>
+            <tr>
+                <th class="table-dark">Saison n°</th>
+                <td>{{ season.number }}</td>
+            </tr>
+            <tr>
+                <th class="table-dark">Année</th>
                 <td>{{ season.year }}</td>
             </tr>
             <tr>
-                <th>Description</th>
+                <th class="table-dark">Description</th>
                 <td>{{ season.description }}</td>
             </tr>
-            <tr>
-                <th>Saison n°</th>
-                <td>{{ season.number }}</td>
-            </tr>
-        </tbody>
-    </table>
+            </tbody>
+        </table>
 
-    <a href="{{ path('season_index') }}" class="btn">Retour</a>
-
-    <a href="{{ path('season_edit', {'id': season.id}) }}" class="btn">Modifier</a>
-
-    {{ include('season/_delete_form.html.twig') }}
+    </div>
 {% endblock %}
