--- a/templates/episode/edit.html.twig
+++ b/templates/episode/edit.html.twig
@@ -3,11 +3,17 @@
 {% block title %}Modifier un Épisode{% endblock %}
 
 {% block body %}
-    <h1>Modifier un Épisode</h1>
+    <div class="container mt-4">
 
-    {{ include('episode/_form.html.twig', {'button_label': 'Update'}) }}
+        <a href="{{ path('episode_index') }}" class="btn btn-primary">
+            <i class="fas fa-reply mr-2"></i> Retour à la liste des épisodes
+        </a>
 
-    <a href="{{ path('episode_index') }}" class="btn">Retour à la liste des épisodes</a>
+        <h1>Modifier un Épisode</h1>
+        <hr>
 
-    {{ include('episode/_delete_form.html.twig') }}
+        {{ include('episode/_form.html.twig', {'button_label': 'Enregistrer les modifications'}) }}
+
+    </div>
+
 {% endblock %}
