--- a/templates/episode/index.html.twig
+++ b/templates/episode/index.html.twig
@@ -3,35 +3,47 @@
 {% block title %}Episodes{% endblock %}
 
 {% block body %}
-    <h1>Tous les épisodes</h1>
 
-    <a href="{{ path('episode_new') }}" class="btn btn-primary">Ajouter un épisode</a>
+    <div class="container admin mt-4">
+        <h1>Tous les épisodes</h1>
+        <hr>
 
-    <table class="table">
-        <thead>
-        <tr>
-            <th>Episode</th>
-            <th>Titre</th>
-            <th>Synopsis</th>
-            <th>Admin</th>
-        </tr>
-        </thead>
-        <tbody>
-        {% for episode in episodes %}
+        <a href="{{ path('episode_new') }}" class="btn btn-primary mb-5"><i class="fas fa-plus mr-2"></i> Ajouter un épisode</a>
+
+        <table class="table table-striped">
+            <thead class="table-dark text-center">
             <tr>
-                <td>{{ episode.number }}</td>
-                <td>{{ episode.title }}</td>
-                <td>{{ episode.synopsis }}</td>
-                <td>
-                    <a href="{{ path('episode_show', {'slug': episode.slug}) }}" class="btn btn-primary">Détails</a>
-                    <a href="{{ path('episode_edit', {'slug': episode.slug}) }}" class="btn btn-primary">Modifier</a>
-                </td>
+                <th class="col-episode">Episode</th>
+                <th class="col-title">Titre</th>
+                <th>Synopsis</th>
+                <th class="w-25">Gestion de l'épisode</th>
             </tr>
-        {% else %}
-            <tr>
-                <td colspan="5">Aucun épisode trouvé</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+            </thead>
+            <tbody>
+            {% for episode in episodes %}
+                <tr>
+                    <td class="text-center align-middle">
+                        <p>(Saison {{ episode.season.number }})</p>
+                        <p><b>{{ episode.number }}</b></p>
+                        <p><i>{{ episode.season.program.title }}</i></p>
+                    </td>
+                    <td class="align-middle">{{ episode.title }}</td>
+                    <td>{{ episode.synopsis|truncate(450) }}</td>
+                    <td class="align-middle">
+                        <div class="buttons">
+                            <a href="{{ path('episode_show', {'slug': episode.slug}) }}" class="btn btn-primary"><i class="far fa-eye mr-2"></i> Détails</a>
+                            <a href="{{ path('episode_edit', {'slug': episode.slug}) }}"
+                               class="btn btn-primary"><i class="fas fa-cog mr-2"></i> Modifier</a>
+                            {{ include('episode/_delete_form.html.twig') }}
+                        </div>
+                    </td>
+                </tr>
+            {% else %}
+                <tr>
+                    <td colspan="5">Aucun épisode trouvé</td>
+                </tr>
+            {% endfor %}
+            </tbody>
+        </table>
+    </div>
 {% endblock %}
