--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -79,3 +79,8 @@ a:hover {
     color:var(--secondary);
     text-decoration:underline var(--primary);
 }
+
+.table-dark {
+    background-color: var(--dark);
+    color: var(--secondary)
+}
