--- a/templates/_navbar.html.twig
+++ b/templates/_navbar.html.twig
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark">
-    <a class="navbar-brand" href="/"><img src="https://zupimages.net/up/19/52/d3e6.png" height="40"
+    <a class="navbar-brand" href="/"><img src="{{ asset('build/images/logo.png') }}" height="40"
                                           class="d-inline-block align-top" alt=""></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -31,8 +31,12 @@
                 <li><a href="{{ path('app_logout') }}" class="nav-link">Déconnexion</a></li>
                 <li><a href="#" class="nav-link">{{ app.user.username }}</a></li>
                 <li class="nav-item">
-                    <img src="{{ app.user.picture }}"
-                         class="profil-pic rounded-circle">
+                    {% if app.user.picture is defined %}
+                        <img src="{{ app.user.picture }}" class="profil-pic rounded-circle">
+                    {% else %}
+                        <img src="{{ asset('build/images/default-profil.jpg') }}"
+                             class="profil-pic rounded-circle">
+                    {% endif %}
                 </li>
                 {% else %}
                     <li>
