--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,6 +9,7 @@
         <link href="https://fonts.googleapis.com/css?family=Orbitron|Notable|Abel&display=swap" rel="stylesheet">
         {{ encore_entry_link_tags('app') }}
     {% endblock %}
+    <link rel="shortcut icon" type="image/png" href="{{ asset('build/images/wild-series.ico') }}"/>
 </head>
 
 <header>
