--- a/templates/_navbar.html.twig
+++ b/templates/_navbar.html.twig
@@ -9,6 +9,9 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
+                <a class="nav-link" href="{{ path('category_index') }}" aria-disabled="true">Catégories</a>
+            </li>
+            <li class="nav-item">
                 <a class="nav-link" href="{{ path('program_index') }}" aria-disabled="true">Séries</a>
             </li>
             <li class="nav-item">
