--- a/templates/_navbar.html.twig
+++ b/templates/_navbar.html.twig
@@ -32,19 +32,13 @@
                 <li class="nav-item">
                     {% if app.user %}
                 <li><a href="{{ path('app_logout') }}" class="nav-link">Déconnexion</a></li>
-                <li><a href="#" class="nav-link">{{ app.user.username }}</a></li>
+                <li><a href="{{ path('user_profile') }}" class="nav-link">{{ app.user.username }}</a></li>
                 <li class="nav-item">
-                    {% if app.user.picture is defined %}
-                        <img src="{{ app.user.picture }}" class="profil-pic rounded-circle">
-                    {% else %}
-                        <img src="{{ asset('build/images/default-profil.jpg') }}"
-                             class="profil-pic rounded-circle">
-                    {% endif %}
+                    <img src="{{ app.user.picture }}" class="profil-pic rounded-circle">
                 </li>
                 {% else %}
                     <li>
                         <a href="{{ path('app_login') }}" class="nav-link">Connexion</a>
-
                     </li>
                 {% endif %}
                 </li>
