--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -27,7 +27,7 @@
         </div>
 
         <div class="d-flex justify-content-center">
-            <a href="{{ path('wild_index') }}" class="btn">Voir toutes les séries</a>
+            <a href="{{ path('wild_index') }}" class="btn btn-primary mb-5">Voir toutes les séries</a>
         </div>
     </div>
 {% endblock %}
