--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -1,6 +1,9 @@
 @import "vars";
 @import '~bootstrap';
 @import '~@fortawesome/fontawesome-free/scss/fontawesome';
+@import '~@fortawesome/fontawesome-free/scss/regular';
+@import '~@fortawesome/fontawesome-free/scss/solid';
+@import '~@fortawesome/fontawesome-free/scss/brands';
 
 @import "nav";
 @import "home";
