--- a/templates/_navbar.html.twig
+++ b/templates/_navbar.html.twig
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark">
+<nav class="navbar navbar-expand-lg navbar-dark fixed-top">
     <a class="navbar-brand" href="/"><img src="{{ asset('build/images/logo.png') }}" height="40"
                                           class="d-inline-block align-top" alt=""></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
